SqlServer instead of Sqllite

--- a/Blogifier.Web/appsettings.json
+++ b/Blogifier.Web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=Data\\app.db"
+    "DefaultConnection": "Server=tcp:samerzmdblog.database.windows.net,1433;Initial Catalog=samerzmdblog;Persist Security Info=False;User ID={username};Password={Password};MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "IncludeScopes": false,
