--- a/Blogifier.Web/Blogifier.Web.csproj
+++ b/Blogifier.Web/Blogifier.Web.csproj
@@ -27,18 +27,16 @@
     <ProjectReference Include="..\Blogifier.Core\Blogifier.Core.csproj" />
   </ItemGroup>
 
-  <Target Name="PostBuild" 
-          AfterTargets="PostBuildEvent" 
-          Condition="Exists('$(SolutionDir)Packages\Widgets\Newsletter\bin\Debug\netcoreapp2.0\Newsletter.dll')">
+  <ItemGroup>
+    <Folder Include="Data\Migrations\" />
+  </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="Exists('$(SolutionDir)Packages\Widgets\Newsletter\bin\Debug\netcoreapp2.0\Newsletter.dll')">
         <PropertyGroup>
             <WidgetBaseDir>$(SolutionDir)Packages\Widgets\</WidgetBaseDir>
         </PropertyGroup>
-    <Copy SourceFiles="$(WidgetBaseDir)Newsletter\bin\$(Configuration)\$(TargetFramework)\Newsletter.dll"
-          DestinationFolder="$(TargetDir)"
-          Condition="Exists('$(WidgetBaseDir)Newsletter\bin\$(Configuration)\$(TargetFramework)\Newsletter.dll')"/>
-    <Copy SourceFiles="$(WidgetBaseDir)PostList\bin\$(Configuration)\$(TargetFramework)\PostList.dll"
-          DestinationFolder="$(TargetDir)"
-          Condition="Exists('$(WidgetBaseDir)PostList\bin\$(Configuration)\$(TargetFramework)\PostList.dll')"/>
+    <Copy SourceFiles="$(WidgetBaseDir)Newsletter\bin\$(Configuration)\$(TargetFramework)\Newsletter.dll" DestinationFolder="$(TargetDir)" Condition="Exists('$(WidgetBaseDir)Newsletter\bin\$(Configuration)\$(TargetFramework)\Newsletter.dll')" />
+    <Copy SourceFiles="$(WidgetBaseDir)PostList\bin\$(Configuration)\$(TargetFramework)\PostList.dll" DestinationFolder="$(TargetDir)" Condition="Exists('$(WidgetBaseDir)PostList\bin\$(Configuration)\$(TargetFramework)\PostList.dll')" />
   </Target>
 
 </Project>
